name:                pomobar
version:             0.1.0.0
synopsis:            A Pomodoro timer for Xmobar
-- description:
-- homepage:            https://github.com/githubuser/pomobar#readme
license:             BSD3
license-file:        LICENSE
author:              Rafael Lourenço Cintra
maintainer:          rcintra@pobox.com
copyright:           2017 Rafael Lourenço Cintra
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pomobar
  build-depends:       base >= 4.7 && < 5
                     , dbus
                     , libxml-sax
                     , time
  default-language:    Haskell2010

executable pomobar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pomobar
                     , optparse-applicative

  default-language:    Haskell2010

-- test-suite pomobar-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , pomobar
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
-- 
-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/pomobar
