name:                pomobar
version:             0.1.0.0
synopsis:            A customisable pomodoro timer for Xmobar.
-- description:
homepage:            https://gitlab.com/rlcintra/pomobar
license:             BSD3
license-file:        LICENSE
author:              Rafael Lourenço Cintra
maintainer:          rcintra@pobox.com
copyright:           2017 Rafael Lourenço Cintra
category:            System
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pomobar
  build-depends:       base >= 4.7 && < 5
                     , dbus
                     , libxml-sax
                     , time
                     , process
  default-language:    Haskell2010

executable pomobar
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pomobar
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/rlcintra/pomobar
